Se agregaron las pestañas de Rules e Information

--- a/About MDHL.html
+++ b/About MDHL.html
@@ -20,6 +20,8 @@
             <a href="index.html">Home</a><br><br>
             <a class="sitio" href="#">About MDHL</a><br><br>
             <a href="Contact.html">Contact</a><br><br>
+            <a href="Game Information.html">Game Information</a><br><br>
+            <a href="Rules.html">Rules and Policies</a>
         </nav>
     </header>
     <main>
