--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <a class="sitio" href="#">Home</a><br><br>
             <a href="About MDHL.html">About MDHL</a><br><br>
             <a href="Contact.html">Contact</a><br><br>
+            <a href="Game Information.html">Game Information</a><br><br>
+            <a href="Rules.html">Rules and Policies</a>
         </nav>
     </header>
     <main>
