--- a/About MDHL.html
+++ b/About MDHL.html
@@ -10,19 +10,25 @@
 </head>
 <body>
     <header>
+
         <img class="portada" src="./Assets/image1.jpg" alt="portada">
-        <h1>Mighty Ducks Hockey League</h1>
-        <div class="block">
-            <h2 class="subtitulo">About MDHL</h2>
+        <div class="container-header">
+            <div class="block">
+                <h1>Mighty Ducks Hockey League</h1>
+                <h2 class="subtitulo">About MDHL</h2>
+            </div>
+            
+            <div class="block barra">
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a class="sitio" href="#">About MDHL</a>
+                    <a href="Contact.html">Contact</a>
+                    <a href="Game Information.html">Game Information</a>
+                    <a href="Register.html">Register</a>
+                    <a href="Rules.html">Rules and Policies</a>
+                </nav>
+            </div>
         </div>
-        <img class="logo" src="./Assets/Logo Mighty ducks-01.png" alt="logo">
-        <nav>
-            <a href="index.html">Home</a><br><br>
-            <a class="sitio" href="#">About MDHL</a><br><br>
-            <a href="Contact.html">Contact</a><br><br>
-            <a href="Game Information.html">Game Information</a><br><br>
-            <a href="Rules.html">Rules and Policies</a>
-        </nav>
     </header>
     <main>
         <section>
@@ -41,5 +47,6 @@
                 parents and previous league members</p>
         </section>
     </main>
+    <img class="logo" src="./Assets/Logo Mighty ducks-01.png" alt="logo">
 </body>
 </html>
